# ddl-generator-modern

./: .gitignore  ANALYSIS.md  CLAUDE.md  CONTRIBUTING.rst  HISTORY.rst  IMPLEMENTATION_PLAN.md  IMPROVEMENT_PLAN.md  MODERNIZATION_PLAN.md  Makefile  README.rst  REVIEW.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml  release.yml
ddlgenerator/: __init__.py  console.py  ddlgenerator.py  reshape.py  sources.py  typehelpers.py  url_utils.py
docs/: conf.py  index.rst  installation.rst  usage.rst
tests/: conftest.py  test_console.py  test_ddlgenerator.py  test_reshape.py  test_sources.py  test_table.py  test_typehelpers.py  test_url_utils.py
